@@ -16,9 +16,16 @@
 #  A copy of the GNU General Public License is available at
 #  https://www.R-project.org/Licenses/
 
-md5sum <- function(files) {
-    files <- path.expand(files)
-    structure(.Call(C_Rmd5, files), names=files)
+md5sum <- function(files, bytes) {
+    if (!missing(files) && !missing(bytes))
+        stop("files and bytes are mutually exclusive")
+    if (!missing(bytes)) {
+        if (!is.raw(bytes)) stop("bytes must be a raw vector")
+        .Call(C_Rmd5, bytes)
+    } else {
+        files <- path.expand(files)
+        structure(.Call(C_Rmd5, files), names=files)
+    }
 }
 
 .installMD5sums <- function(pkgDir, outDir = pkgDir)
