@@ -7,13 +7,15 @@
 \alias{md5sum}
 \title{Compute MD5 Checksums}
 \description{
-  Compute the 32-byte MD5 hashes of one or more files.
+  Compute the 32-byte MD5 hashes of one or more files, or a raw vector of bytes.
 }
 \usage{
-md5sum(files)
+md5sum(files, bytes)
 }
 \arguments{
   \item{files}{character. The paths of file(s) whose contents are to be hashed.}
+  \item{bytes}{raw. Bytes to be hashed.
+    NB: \code{bytes} and \code{files} are mutually exclusive.}
 }
 \details{
   A MD5 \sQuote{hash} or \sQuote{checksum} or \sQuote{message digest} is
@@ -34,6 +36,8 @@ md5sum(files)
   equal to \code{files} (possibly expanded).  The elements will be
   \code{NA} for non-existent or unreadable files, otherwise a
   32-character string of hexadecimal digits.
+  
+  For \code{bytes} the result is a single 32-character string.
 }
 \source{
   The underlying C code was written by \I{Ulrich Drepper} and extracted from
@@ -44,6 +48,8 @@ md5sum(files)
 }
 \examples{
 as.vector(md5sum(dir(R.home(), pattern = "^COPY", full.names = TRUE)))
+md5sum(bytes=raw())
+md5sum(bytes=charToRaw("abc"))
 }
 \keyword{utilities}
 
