@@ -796,6 +796,10 @@ character(0)
 > 
 > as.vector(md5sum(dir(R.home(), pattern = "^COPY", full.names = TRUE)))
 [1] "eb723b61539feef013de476e68b5c50a"
+> md5sum(bytes=raw())
+[1] "d41d8cd98f00b204e9800998ecf8427e"
+> md5sum(bytes=charToRaw("abc"))
+[1] "900150983cd24fb0d6963f7d28e17f72"
 > 
 > 
 > 
